fix: restore Java 11 compatibility by replacing Stream.toList() with collect(Collectors.toList())